Finished working on Auth endpoints